# real_time_data_streaming

./: .tmux  LICENSE  Pipfile  README.md  docker-compose.yml  requirements.txt  spark_writer.py
dag/: dag.py  models.py
dags/: dag.py  data_generator.py  models.py  stream_generator.py
data/: pyproject.toml
data/src/data/: db.py  user.py
scripts/: entrypoint.sh
