[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Vangipuram Srinivasa Sarath Chandra", email = "vssarathc04@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]

[tool.hatch.version]
path = "src/data/__about__.py"